<resources>
    <string name="app_name">Irish Whistle Tabs</string>
    <string name="dev_email">charles.grassin@gmail.com</string>

    <!-- List activity -->
    <string name="mainActivity_sheetPicturePlaceholder">Sheet picture</string>
    <string name="mainActivity_sheetTitlePlaceholder">Sheet title</string>
    <string name="mainActivity_sheetDetailsPlaceholder">Sheet details</string>
    <string name="mainActivity_no_results">No results…</string>
    <string name="mainActivity_sheetDetails_string">%1$s , %2$s</string>

    <!-- About dialog -->
    <string name="aboutDialog_title">About Irish Whistle Tabs</string>
    <string name="aboutDialog_message">Irish Whistle Tabs created by <b>Charles GRASSIN</b> under GPLv2 (free, open-source) licence.\n\nBuilt with <b>Tin Whistle Tab font</b> © Blayne Chastain / www.blaynechastain.com and <b>The Session</b> ODbL / https://thesession.org.\n\nThanks to everyone who uses this app and to those who took the time to leave a kind word.</string>
    <string name="aboutDialog_okBtn">OK</string>
    <string name="aboutDialog_websiteBtn">Visit Website</string>
    <string name="aboutDialog_website">https://charleslabs.fr</string>

    <!-- Tempo dialog -->
    <string name="tempoDialog_title">Change tempo</string>
    <string name="tempoDialog_message">Enter new tempo modifier in percent (between %1$d and %2$d%%).</string>
    <string name="tempoDialog_editHint">Set tempo</string>
    <string name="tempoDialog_error">Invalid tempo (%1$s).</string>
    <string name="tempoDialog_error_min">Too slow! Changed to minimum value (%1$d%%).</string>
    <string name="tempoDialog_error_max">Too fast! Changed to maximum value (%1$d%%).</string>
    <string name="tempoDialog_checkbox">Add a %1$.1fs delay before playing (time to pick up whistle)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_set">Set</string>

    <!-- Key dialog -->
    <string name="keyDialog_title">Change whistle key</string>

    <!-- Sheet info dialog -->
    <string name="sheetInfoDialog_title">About this music…</string>
    <string name="sheetInfoDialog_ok">OK</string>
    <string name="sheetInfoDialog_sheet_title">&lt;b&gt;Title&lt;/b&gt;: %1$s</string>
    <string name="sheetInfoDialog_sheet_author">&lt;br&gt;&lt;b&gt;Author&lt;/b&gt;: %1$s</string>
    <string name="sheetInfoDialog_sheet_type">&lt;br&gt;&lt;b&gt;Type&lt;/b&gt;: %1$s</string>
    <string name="sheetInfoDialog_sheet_license">&lt;br&gt;&lt;b>Sheet license&lt;/b&gt;: %1$s</string>

    <!-- Tab activity -->
    <string name="TabActivity_playPause">Play/Pause</string>
    <string name="TabActivity_stop">Stop</string>
    <string name="TabActivity_more">Details</string>
    <string name="TabActivity_score">Score</string>

    <!-- Sheet activity -->
    <string name="sheetActivity_title">Score: %1$s</string>

    <!-- Menus -->
    <string name="menu_about">About</string>
    <string name="menu_search_by_title">Search by title</string>
    <string name="menu_tempo">Tempo</string>
    <string name="menu_key">Key</string>
    <string name="mainActivity_request_a_tune">Request a tune…</string>

    <!-- Error messages -->
    <string name="error_contact">Could not send mail: %1$s</string>
    <string name="error_tune_generation">Media playback disabled: %1$s</string>

    <!-- Error messages -->
    <string name="TabActivity_add_bookmark">Add bookmark</string>
    <string name="TabActivity_remove_bookmark">Remove bookmark</string>
    <string name="header_bookmarks">★ Bookmarks (%d)</string>
    <string name="header_all_tunes">All Tunes (%d)</string>
</resources>
